After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 657464 - gnome-settings-daemon crashed with SIGSEGV in cond_setting_changed()
gnome-settings-daemon crashed with SIGSEGV in cond_setting_changed()
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: xsettings
3.1.x
Other Linux
: Normal critical
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2011-08-26 18:18 UTC by Pedro Villavicencio
Modified: 2011-08-30 14:52 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2



Description Pedro Villavicencio 2011-08-26 18:18:57 UTC
this report has been filed here:

https://bugs.launchpad.net/ubuntu/+source/gnome-settings-daemon/+bug/834025

"clicking around in top panel"

".

Thread 1 (Thread 0xb788c840 (LWP 1103))

  • #0 cond_setting_changed
    at gsd-xsettings-gtk.c line 81
  • #1 g_cclosure_marshal_VOID__STRING
    at /build/buildd/glib2.0-2.29.16/./gobject/gmarshal.c line 504
  • #2 g_closure_invoke
    at /build/buildd/glib2.0-2.29.16/./gobject/gclosure.c line 773
  • #3 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.29.16/./gobject/gsignal.c line 3271
  • #4 g_signal_emit_valist
    at /build/buildd/glib2.0-2.29.16/./gobject/gsignal.c line 3002
  • #5 g_signal_emit
    at /build/buildd/glib2.0-2.29.16/./gobject/gsignal.c line 3059
  • #6 g_settings_real_change_event
    at /build/buildd/glib2.0-2.29.16/./gio/gsettings.c line 277
  • #7 ffi_call_SYSV
    at ../src/x86/sysv.S line 64
  • #8 ffi_call
    at ../src/x86/ffi.c line 303
  • #9 g_cclosure_marshal_generic
    at /build/buildd/glib2.0-2.29.16/./gobject/gclosure.c line 1146
  • #10 g_type_class_meta_marshal
    at /build/buildd/glib2.0-2.29.16/./gobject/gclosure.c line 884
  • #11 g_closure_invoke
    at /build/buildd/glib2.0-2.29.16/./gobject/gclosure.c line 773
  • #12 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.29.16/./gobject/gsignal.c line 3309
  • #13 g_signal_emit_valist
    at /build/buildd/glib2.0-2.29.16/./gobject/gsignal.c line 3012
  • #14 g_signal_emit
    at /build/buildd/glib2.0-2.29.16/./gobject/gsignal.c line 3059
  • #15 settings_backend_path_changed
    at /build/buildd/glib2.0-2.29.16/./gio/gsettings.c line 346
  • #16 g_settings_backend_invoke_closure
    at /build/buildd/glib2.0-2.29.16/./gio/gsettingsbackend.c line 271
  • #17 g_idle_dispatch
    at /build/buildd/glib2.0-2.29.16/./glib/gmain.c line 4780
  • #18 g_main_dispatch
    at /build/buildd/glib2.0-2.29.16/./glib/gmain.c line 2439
  • #19 g_main_context_dispatch
    at /build/buildd/glib2.0-2.29.16/./glib/gmain.c line 3008
  • #20 g_main_context_iterate
    at /build/buildd/glib2.0-2.29.16/./glib/gmain.c line 3086
  • #21 g_main_loop_run
    at /build/buildd/glib2.0-2.29.16/./glib/gmain.c line 3294
  • #22 gtk_main
    at /build/buildd/gtk+3.0-3.1.12/./gtk/gtkmain.c line 1367
  • #23 main
    at main.c line 451

Comment 1 Bastien Nocera 2011-08-30 14:52:51 UTC
commit 9054d2321acb592cb8223e76b591ce232a91a77e
Author: Bastien Nocera <hadess@hadess.net>
Date:   Tue Aug 30 15:51:57 2011 +0100

    xsettings: Don't poke at an empty hashtable
    
    We might not like the result.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=657464