xsettings: Don't poke at an empty hashtable

We might not like the result.

https://bugzilla.gnome.org/show_bug.cgi?id=657464